Updated JQuery version due to XSS vulnerability

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -160,6 +160,8 @@
   <ItemGroup>
     <Content Include="403.html" />
     <Content Include="404.html" />
+    <Content Include="Content\lib\jquery\dist\jquery-3.3.1.js" />
+    <Content Include="Content\lib\jquery\dist\jquery-3.3.1.min.js" />
     <Content Include="Error.html" />
     <Content Include="Content\css\application.css" />
     <Content Include="Content\js\application.js" />
@@ -181,9 +183,6 @@
     <Content Include="Content\lib\govuk-frontend\dist\govuk-frontend-2.0.0.min.js" />
     <Content Include="Content\lib\govuk-frontend\dist\govuk-frontend-ie8-2.0.0.min.css" />
     <Content Include="Content\lib\govuk-frontend\dist\VERSION.txt" />
-    <Content Include="Content\lib\jquery\dist\jquery.js" />
-    <Content Include="Content\lib\jquery\dist\jquery.min.js" />
-    <Content Include="Content\lib\jquery\LICENSE.txt" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -240,7 +239,7 @@
     <Content Include="Content\lib\govuk-frontend\dist\assets\fonts\light-tabular-498ea8ffe2-v1.eot" />
     <Content Include="Content\lib\govuk-frontend\dist\assets\fonts\light-tabular-62cc6f0a28-v1.woff" />
     <Content Include="Content\lib\govuk-frontend\dist\assets\fonts\light-tabular-851b10ccdd-v1.woff2" />
-    <Content Include="Content\lib\jquery\dist\jquery.min.map" />
+    <Content Include="Content\lib\jquery\dist\jquery-3.3.1.min.map" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
