--- a/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
@@ -17,12 +17,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.2.17"/>
-        <PackageReference Include="SFA.DAS.Http" Version="3.2.69"/>
+        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.2.17" />
+        <PackageReference Include="SFA.DAS.Http" Version="3.2.69" />
+        <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj"/>
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj" />
     </ItemGroup>
 
 </Project>
