--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
     <ItemGroup>
 <!--        <PackageReference Include="Azure.Identity" Version="1.8.2" />-->
+        <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.3" />
         <PackageReference Include="SFA.DAS.Api.Common" Version="1.0.28" />
